--- a/views/components/search_bar.templ
+++ b/views/components/search_bar.templ
@@ -1,8 +1,9 @@
 package components
 
 templ SearchBar() {
-			<form hx-get="" hx-target="" class="border-black border-2 rounded w-full max-w-2xl min-w-96 bg-white p-2 flex justify-between">
-				<input class="p-1 w-3/4 rounded" type="text" name="query" placeholder="e.g. Durban"/>
-				<button type="submit" class="p-2 w-24 h-11 font-bold rounded" style="background-color: #FF8C00;">Search</button>
+			<form class="border-black border-2 rounded w-full max-w-2xl min-w-96 bg-white p-2 flex justify-between items-center">
+				<i class="fa-solid fa-magnifying-glass text-2xl ml-1" style="color: #000000;"></i>
+				<input class="p-1 w-3/4 rounded " type="search" name="search" hx-post="/search" hx-target="" placeholder="Search for a City or Suburb"/>
+				<button type="submit" class="hover:scale-110 p-2 w-24 h-11 font-bold rounded" style="background-color: #FF8C00;">Search</button>
 			</form>
 }
