--- a/views/components/user_navbar.templ
+++ b/views/components/user_navbar.templ
@@ -1,10 +1,10 @@
 package components
 
 templ UserNavbar() {
-			<nav class="flex flex-row justify-between items-center w-screen h-16 p-6">
-					<h2 class="font-bold text-2xl"><a href="/">Dwelr</a></h2>
-					<ul class="font-bold flex flew-row justify-between">
-						<li class="ml-4"><a href="/logout">Logout</a></li>
-					</ul>
-				</nav>
+	<nav class="flex flex-row justify-between items-center w-screen h-16 p-6">
+		@Logo()
+		<ul class="mr-12 font-bold flex flew-row justify-between">
+			<li class="ml-6 hover:scale-125"><a href="/logout">Login</a></li>
+		</ul>
+	</nav>
 }
