--- a/views/components/guest_navbar.templ
+++ b/views/components/guest_navbar.templ
@@ -2,11 +2,11 @@ package components
 
 templ GuestNavbar() {
 			<nav class="flex flex-row justify-between items-center w-screen h-16 p-6">
-					<h2 class="font-bold text-2xl"><a href="/">Dwelr</a></h2>
-					<ul class="font-bold flex flew-row justify-between">
-						<li class="ml-4"><a href="/about">Our Story</a></li>
-						<li class="ml-4"><a href="/login">Login</a></li>
-						<li class="ml-4"><a href="/register">Sign Up</a></li>
+					@Logo()
+					<ul class="mr-12 font-bold flex flew-row justify-between">
+						<li class="ml-6 hover:scale-125"><a href="/about">Our Story</a></li>
+						<li class="ml-6 hover:scale-125"><a href="/login">Login</a></li>
+						<li class="ml-6 hover:scale-125"><a href="/register">Sign Up</a></li>
 					</ul>
 				</nav>
 }
