--- a/views/pages/add_listing.templ
+++ b/views/pages/add_listing.templ
@@ -10,34 +10,57 @@ templ AddListingPage() {
 				/* Left side */
 				<div class="w-1/2 p-4">
 					<form class="flex flex-col">
-						<label class="font-bold mt-5 mb-3 text-base">Location</label>
-						<input class="p-2 border-black border-2 rounded" type="text" required/>
-						<label class="font-bold mt-5 mb-3 text-base">Title</label>
-						<input class="p-2 border-black border-2 rounded" type="text" required/>
-						<label class="font-bold mt-5 mb-3 text-base">Description</label>
-						<textarea class="p-2 border-black border-2 rounded resize-none" rows="5" cols="50" required></textarea>
-						<label class="font-bold mt-5 mb-3 text-base">Rental Fee (ZAR)</label>
-						<input class="p-2 border-black border-2 rounded" type="number" min="0.00" max="99999.99" step="100.00" required/>
-						<label for="type_of_listing" class="font-bold mt-5 mb-3 text-base">Type of Listing</label>
-						<select name="types" id="type_of_listing" class="p-2 border-black border-2 bg-white rounded">
+						// Location
+						<label for="location" class="font-bold mt-5 mb-3 text-base">Location</label>
+						<div class="relative">
+							<input id="location" name="location" class="w-full p-2 border-black border-2 rounded peer focus:outline-none focus:ring focus:ring-orange-300" hx-post="/api/location" hx-target="#location_results" hx-trigger="input changed delayed:500ms, location" type="text" placeholder="Enter a suburb" autocomplete="off" required/>
+							<div class="absolute max-h-80 overflow-y-scroll top-full left-0 w-full bg-white border-black border-2 rounded opacity-0 peer-focus:opacity-100 p-2 ">
+								<ul id="location_results">
+								</ul>
+							</div>
+						</div>
+						// Title
+						<label for="title" class="font-bold mt-5 mb-3 text-base">Title</label>
+						<input class="p-2 border-black border-2 rounded" name="title" type="text" required/>
+						// Description
+						<label for="description" class="font-bold mt-5 mb-3 text-base">Description</label>
+						<textarea class="p-2 border-black border-2 rounded resize-none" name="description" rows="5" cols="50" required></textarea>
+						// Rental fee
+						<label for="rental_fee" class="font-bold mt-5 mb-3 text-base">Rental Fee (ZAR)</label>
+						<input class="p-2 border-black border-2 rounded" type="number" min="0.00" name="rental_fee" max="99999.99" step="100.00" required/>
+						// Type
+						<label for="type" class="font-bold mt-5 mb-3 text-base">Type of Listing</label>
+						<select name="type" id="type" class="p-2 border-black border-2 bg-white rounded" required>
 							<option value="">-- Select --</option>
-							<option value="">Apartment/Flat</option>
-							<option value="">House</option>
-							<option value="">Room</option>
+							<option value="Apartment/Flat">Apartment/Flat</option>
+							<option value="House">House</option>
+							<option value="Room">Room</option>
 						</select>
-						<label class="font-bold mt-5 mb-3 text-base">Number of Bedrooms</label>
-							<input class="p-2 border-black border-2 rounded" type="number" min="0" max="99" step="1" required/>
-						<label class="font-bold mt-5 mb-3 text-base">Number of Bathrooms</label>
-							<input class="p-2 border-black border-2 rounded" type="number" min="0" max="99" step="1" required/>
+						// Number of bedrooms
+						<label for="number_of_bedrooms" class="font-bold mt-5 mb-3 text-base">Number of Bedrooms</label>
+							<input class="p-2 border-black border-2 rounded" name="number_of_bedrooms" type="number" min="0" max="99" step="1" required/>
+						// Number of bathrooms
+						<label for="number_of_bathrooms" class="font-bold mt-5 mb-3 text-base">Number of Bathrooms</label>
+							<input class="p-2 border-black border-2 rounded" name="number_of_bathrooms" type="number" min="0" max="99" step="1" required/>
 					</form>
 				</div>
 				/* Right side */
 				<div class="w-1/2 py-4 pr-4 pl-8">
+					/*
 					<label class="font-bold mt-5 mb-3 text-base block">Add Photos:</label>
 					<input type="file" accept="image/*"/>
+					*/
 				</div>
+				<button hx-post="/api/listings"
+						hx-include="[name='title'], [name='location'], [name='description'], [name='type'], [name='rental_fee'], [name='number_of_bedrooms'], [name='number_of_bathrooms']"
+						hx-target="#response"
+						class="font-bold w-40 h-14 mx-auto mb-20 rounded"
+						type="submit"
+						style="background-color: #FF8C00;">Publish Listing</button>
 			</div>
-			<button class="font-bold w-40 h-14 mx-auto mb-20 rounded" type="submit" style="background-color: #FF8C00;">Publish Listing</button>
+			<div class="flex justify-center p-2 mb-2 text-lg">
+				<p id="response"></p>
+			</div>
 		</div>
 	}
 }
