--- a/views/pages/home.templ
+++ b/views/pages/home.templ
@@ -5,11 +5,9 @@ import "dwelr/views/components"
 
 templ HomePage() {
 	@layouts.Base() {
-		<div class="py-8 px-14 flex max-w-6xl flex-col items-center" style="height: calc(100vh - 64px);">
-			/* Search bar component */
+		<div class="py-8 px-52 flex flex-col items-center">
 			@components.SearchBar()
-			<h2 class="font-bold text-xl mt-20">Welcome to Dwelr – Your Gateway to Hassle-Free Rentals!</h2>
-			<p class="mt-3">Find or list your ideal rental effortlessly with our intuitive platform.</p>
+			@components.ListingCard()
 		</div>
 	}
 }
