--- a/views/pages/register.templ
+++ b/views/pages/register.templ
@@ -15,30 +15,36 @@ templ RegisterPage() {
 			<script src="https://unpkg.com/htmx.org@1.9.11" integrity="sha384-0gxUXCCR8yv9FM2b+U3FDbsKthCI66oH5IA9fHppQq9DDMHuMauqq1ZHBpJxQ0J0" crossorigin="anonymous"></script>
 		</head>
 		<body class="">
-			<div class="flex h-screen">
-				/* Left side */
-				<div class="w-1/2 flex justify-center">
-					<figure class="flex justify-center items-center w-full">
-						<img class="w-full h-full" src="views/images/register.png"/>
-					</figure>
-				</div>
-				/* Right side */
-				<div class="w-1/2 flex flex-col justify-center items-center p-6">
-					<h1 class="font-bold text-3xl">Get Started</h1>
-					<p>Already have an account? <a class="font-bold" href="/login">Log In</a></p>
-					<form class="flex flex-col mt-8">
-						<input class="border-b-black border-b-2 px-3 pt-3 p-1 w-80 h-14 placeholder-black" style="background-color: #FAF9F6;" type="text" placeholder="First Name"/>
-						<input class="border-b-black border-b-2 px-3 pt-3 p-1 w-80 h-14 mt-0.5 placeholder-black" style="background-color: #FAF9F6;" type="text" placeholder="Last Name"/>
-						<input class="border-b-black border-b-2 px-3 pt-3 p-1 w-80 h-14 mt-0.5 placeholder-black" style="background-color: #FAF9F6;" type="email" placeholder="Email"/>
-						<input class="border-b-black border-b-2 px-3 pt-3 p-1 w-80 h-14 mt-0.5 placeholder-black" style="background-color: #FAF9F6;" type="password" placeholder="Password"/>
-						<input class="border-b-black border-b-2 px-3 pt-3 p-1 w-80 h-14 mt-0.5 placeholder-black" style="background-color: #FAF9F6;" type="password" placeholder="Confirm Password"/>
-						<p class="text-center mt-4">I am a</p>
-						<div class="flex justify-center">
-							<button class="border-blue-100 bg-white rounded w-40 h-14 mt-4" type="button" >Tenant</button>
-							<button class="border-blue-100 bg-white rounded w-40 h-14 mt-4" type="button" >Landlord</button>
-						</div>
-						<button class="bg-black text-white rounded w-80 h-14 mt-4" type="submit">Register</button>
-					</form>
+			<div class="flex h-screen justify-center items-center">
+				<div class="bg-white flex justify-center items-center max-w-4xl rounded shadow-lg">
+					/* Left side */
+					<div class="w-1/2 flex justify-center">
+						<figure class="flex justify-center items-center w-full">
+							<img class="w-full h-full rounded-l" src="views/images/register.png"/>
+						</figure>
+					</div>
+					/* Right side */
+					<div class="bg-white w-1/2 flex flex-col justify-center items-center p-6">
+						<h1 class="font-bold text-3xl">Get Started</h1>
+						<p>Already have an account? <a class="font-bold" href="/login">Log In</a></p>
+						<form class="flex flex-col mt-8">
+							<input class="border-b-black border-b-2 px-3 pt-3 p-1 w-80 h-14 placeholder-black" type="text" name="first_name" placeholder="First Name"/>
+							<input class="border-b-black border-b-2 px-3 pt-3 p-1 w-80 h-14 mt-0.5 placeholder-black" type="text" name="last_name" placeholder="Last Name"/>
+							<input class="border-b-black border-b-2 px-3 pt-3 p-1 w-80 h-14 mt-0.5 placeholder-black" type="email" name="email" placeholder="Email"/>
+							<input class="border-b-black border-b-2 px-3 pt-3 p-1 w-80 h-14 mt-0.5 placeholder-black" type="password" name="password" placeholder="Password"/>
+							<input class="border-b-black border-b-2 px-3 pt-3 p-1 w-80 h-14 mt-0.5 placeholder-black" type="password" name="confirm_password" placeholder="Confirm Password"/>
+							<button class="bg-black text-white font-bold rounded w-80 h-14 mt-4" type="submit" 
+									hx-post="/register"
+									hx-target="#response"
+									hx-include="[name = 'first_name'],
+												[name = 'last_name'],
+												[name = 'email'],
+												[name = 'password'],
+												[name = 'confirm_password']">Register</button>
+
+							<p id="response" class="m-2 p-2 text-center"></p>
+						</form>
+					</div>
 				</div>
 			</div>
 		@components.Footer()
