--- a/views/layouts/base.templ
+++ b/views/layouts/base.templ
@@ -1,8 +1,9 @@
 package layouts
 
 import "dwelr/views/components"
+import "dwelr/models"
 
-templ Base() {
+templ Base(isLoggedIn bool, user models.User) {
 	<!DOCTYPE html>
 	<html lang="en">
 		<head>
@@ -18,7 +19,11 @@ templ Base() {
 		</head>
 		<body>
 			<header>
-				@components.GuestNavbar()
+				if isLoggedIn {
+					@components.UserNavbar(user)
+				} else {
+					@components.GuestNavbar()
+				}
 			</header>
 			<div class="min-h-screen p-6 flex flex-col items-center">
 				{ children... }
