--- a/views/pages/not_found.templ
+++ b/views/pages/not_found.templ
@@ -1,8 +1,9 @@
 package pages
 
 import "dwelr/views/components"
+import "dwelr/models"
 
-templ NotFound() {
+templ NotFound(isLoggedIn bool, user models.User) {
 	<!DOCTYPE html>
 	<html lang="en">
 	<head>
@@ -15,7 +16,11 @@ templ NotFound() {
 		<script src="https://kit.fontawesome.com/84325e05c5.js" crossorigin="anonymous"></script>
 	</head>
 	<body class="flex flex-col items-center">
-		@components.GuestNavbar()
+		if isLoggedIn {
+			@components.UserNavbar(user)
+		} else {
+			@components.GuestNavbar()
+		}
 		<div class="flex justify-center items-center max-w-6xl" style="height: calc(100vh - 64px);">
 			<h1 class="font-bold text-4xl p-4"><span class="text-9xl">404</span><br/><br/>Oops,<br/>Page Not Found...</h1>
 			<img class="max-w-3xl" src="/views/images/error.svg"/>
