--- a/views/pages/profile.templ
+++ b/views/pages/profile.templ
@@ -1,16 +1,12 @@
 package pages
 
 import "dwelr/views/layouts"
-import "github.com/markbates/goth"
+import "dwelr/models"
 
-templ ProfilePage(user goth.User) {
-	@layouts.Base() {
+templ ProfilePage(isLoggedIn bool, user models.User) {
+	@layouts.Base(isLoggedIn, user) {
 		<div class="w-full" style="height: calc(100vh - 64px);">
-			if user.Name != "" {
-				<h1 class="font-bold text-2xl text-center mb-10">{ user.Name }'s Profile</h1>
-			} else {
-				<h1 class="font-bold text-2xl text-center mb-10">User Profile</h1>
-			}
+			<h1 class="font-bold text-2xl text-center mb-10">User Profile</h1>
 			<div class="flex max-w-4xl mx-auto">
 				/* Left side of the profile */
 				<div class="flex flex-col justify-center items-center p-5 w-1/3">
@@ -22,18 +18,14 @@ templ ProfilePage(user goth.User) {
 				/* Right side of the profile */
 				<div class="p-5 w-2/3">
 					/* Full Name */
-					<p class="font-bold text-2xl my-8">John Doe</p>
+					<p class="font-bold text-2xl my-8">{ user.FirstName + " " + user.LastName}</p>
 					<p class="font-bold mt-2 mb-1">Email</p>
-					<p >johndoe123@gmail.com</p>
+					<p >{ user.Email }</p>
 					<hr class="mt-2 border-2"/>
 					<p class="font-bold mt-2 mb-1">Password</p>
 					<p>********</p>
 					<hr class="mt-2 border-2"/>
-					<p class="font-bold mt-2 mb-1">Account Type</p>
-					<p>Landlord</p>
 					<hr class="mt-2 border-2"/>
-					<p class="font-bold mt-2 mb-1">Contact Number</p>
-					<p>0123456789</p>
 				</div>
 			</div>
 		</div>
