--- a/views/pages/view_listing.templ
+++ b/views/pages/view_listing.templ
@@ -1,28 +1,56 @@
 package pages
 
-import "dwelr/views/layouts"
+import "dwelr/models"
+import "strconv"
+import "dwelr/views/components"
 
-templ ViewListingPage() {
-	@layouts.Base() {
-		<div class="flex flex-col px-8 max-w-6xl" style="height: calc(100vh - 64px);">
-			<h1 class="font-bold text-center text-2xl">View Listing</h1>
-			<figure class="bg-gray-300 my-12 rounded">
-				<img class="w-full h-full max-h-72"src="/views/images/Placeholder.svg"/>
-			</figure>
-			/* Rental Fee */
-			<p class="font-bold text-2xl">R 10 500</p>
-			/* Number of rooms and listing type */
-			<p class="my-4">1 Bedroom Apartment</p>
-			/* Location */
-			<p class="">Bluff, Durban</p>
-			/* Number of bedrooms and bathrooms */
-			<div class="flex items-center font-bold my-4">
-				<p>1 Bedroom</p>
-				<p>1 Bathroom</p>
-				<button class="w-52 h-9 p-1 rounded ml-auto" type="button" style="background-color: #FF8C00;">Contact Landlord</button>
+templ ViewListingPage(listing models.Listing, isLoggedIn bool, user models.User) {
+	<!DOCTYPE html>
+	<html lang="en">
+		<head>
+			<meta charset="UTF-8"/>
+			<meta name="viewport" content="width=device-width, initial-scale=1"/>
+			<title>Dwelr - Hassle-Free Rentals</title>
+			<link href="/views/css/output.css" rel="stylesheet"/>
+			<link href="/views/css/styles.css" rel="stylesheet"/>
+			<script src="https://cdn.tailwindcss.com"/>
+			<script src="https://unpkg.com/htmx.org@1.9.11"></script>
+			/* <script src="https://unpkg.com/htmx.org@1.9.11" integrity="sha384-0gxUXCCR8yv9FM2b+U3FDbsKthCI66oH5IA9fHppQq9DDMHuMauqq1ZHBpJxQ0J0" crossorigin="anonymous"/> */
+			<script src="https://kit.fontawesome.com/84325e05c5.js" crossorigin="anonymous"/>
+		</head>
+		<body>
+			<header>
+				if isLoggedIn {
+					@components.UserNavbar(user)
+				} else {
+					@components.GuestNavbar()
+				}
+			</header>
+			<div class="min-h-screen p-6 flex flex-col items-center">
+				<div class="flex flex-col px-8 max-w-6xl" style="height: calc(100vh - 64px);">
+					<h1 class="font-bold text-center text-2xl">View Listing</h1>
+					<figure class="bg-gray-300 my-12 rounded">
+						<img class="w-full h-full max-h-72"src="/views/images/Placeholder.svg"/>
+					</figure>
+					/* Rental Fee */
+					<p class="font-bold text-2xl">R { strconv.FormatFloat(listing.RentalFee, 'f', -1, 64) }</p>
+					/* Number of rooms and listing type */
+					<p class="my-4">{ strconv.Itoa(int(listing.NumberOfBedrooms)) } Bedroom Apartment</p>
+					/* Location */
+					<p class="">{ listing.Location }</p>
+					/* Number of bedrooms and bathrooms */
+					<div class="flex items-center font-bold my-4">
+						<p>{ strconv.Itoa(int(listing.NumberOfBedrooms)) } Bedroom</p>
+						<p class="ml-1">{ strconv.Itoa(int(listing.NumberOfBathrooms)) } Bathroom</p>
+						<button class="w-52 h-9 p-1 rounded ml-auto" type="button" style="background-color: #FF8C00;">Contact Landlord</button>
+					</div>
+					/* Description */
+					<p class="my-4">{ listing.Description }</p>
+				</div>
 			</div>
-			/* Description */
-			<p class="my-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi porta, ex in euismod iaculis, enim metus pharetra odio, at pellentesque purus nisi sed.</p>
-		</div>
-	}
+			// Footer component
+			@components.Footer()
+			<script src="/views/scripts/scripts.js"/>
+		</body>
+	</html>
 }
