Latest code updates

--- a/views/components/footer.templ
+++ b/views/components/footer.templ
@@ -1,7 +1,7 @@
 package components
 
 templ Footer() {
-	<footer class="h-72 w-screen px-10 pt-10 pb-5">
+	<footer class="mt-auto h-72 w-screen px-10 pt-10 pb-5">
 		/* Top half of the footer*/
 		<div class="flex flex-row justify-between">
 			@Logo()
