--- a/views/layouts/base.templ
+++ b/views/layouts/base.templ
@@ -17,7 +17,7 @@ templ Base(isLoggedIn bool, user models.User) {
 			/* <script src="https://unpkg.com/htmx.org@1.9.11" integrity="sha384-0gxUXCCR8yv9FM2b+U3FDbsKthCI66oH5IA9fHppQq9DDMHuMauqq1ZHBpJxQ0J0" crossorigin="anonymous"/> */
 			<script src="https://kit.fontawesome.com/84325e05c5.js" crossorigin="anonymous"/>
 		</head>
-		<body>
+		<body class="flex flex-col min-h-screen pt-16">
 			<header>
 				if isLoggedIn {
 					@components.UserNavbar(user)
@@ -25,8 +25,10 @@ templ Base(isLoggedIn bool, user models.User) {
 					@components.GuestNavbar()
 				}
 			</header>
-			<div class="min-h-screen p-6 flex flex-col items-center">
-				{ children... }
+			<div class="px-6 pb-6 flex flex-col items-center">
+				<div class="flex-grow">
+					{ children... }
+				</div>
 			</div>
 			// Footer component
 			@components.Footer()
