--- a/views/components/guest_navbar.templ
+++ b/views/components/guest_navbar.templ
@@ -1,10 +1,11 @@
 package components
 
 templ GuestNavbar() {
-			<nav class="flex flex-row justify-between items-center w-screen h-16 p-6">
+			<nav class="flex flex-row justify-between items-center w-screen h-16 p-6 fixed top-0 z-10" style="background-color: var(--lightGray);">
 					@Logo()
 					<ul class="mr-12 font-bold flex flew-row justify-between">
-						<li class="ml-6 hover:scale-125"><a href="/about">Our Story</a></li>
+						<li class="ml-6 hover:scale-125"><a href="#features">Features</a></li>
+						<li class="ml-6 hover:scale-125"><a href="#about">About</a></li>
 						<li class="ml-6 hover:scale-125"><a href="/login">Login</a></li>
 						<li class="ml-6 hover:scale-125"><a href="/register">Sign Up</a></li>
 					</ul>
