Latest batch of code updates

--- a/views/components/guest_navbar.templ
+++ b/views/components/guest_navbar.templ
@@ -1,7 +1,7 @@
 package components
 
 templ GuestNavbar() {
-			<nav class="flex flex-row justify-between items-center w-screen h-16 p-6 fixed top-0 z-10" style="background-color: var(--lightGray);">
+			<nav class="flex flex-row justify-between items-center w-screen h-16 p-6 fixed top-0 z-10" >
 					@Logo()
 					<ul class="mr-12 font-bold flex flew-row justify-between">
 						<li class="ml-6 hover:scale-125"><a href="#features">Features</a></li>
