--- a/views/components/listing_card.templ
+++ b/views/components/listing_card.templ
@@ -8,11 +8,11 @@ import "fmt"
 templ ListingCard(listing models.Listing) {
 	//<a href="/view-listing/{{ .ID }}">
 	<a href={ templ.URL(fmt.Sprintf("/view-listing/%d", listing.ID))}>
-		<div class="flex h-72 w-full mt-8 max-w-6xl rounded shadow-xl hover:cursor-pointer hover:border-2 hover:border-orange-300">
+		<div class="bg-white flex h-72 w-full mt-8 max-w-6xl rounded shadow-xl hover:cursor-pointer hover:border-4 hover:border-orange-200">
 			/* Left side of the card */
 			<div class="w-2/5">
 				<figure class="bg-black flex justify-center items-center h-full w-full">
-					<img class="h-full" src="/views/images/Placeholder.svg"/>
+					<img class="h-full object-cover" src="/views/images/Placeholder.svg"/>
 				</figure>
 			</div>
 			/* Right side of the card */
