--- a/views/components/user_navbar.templ
+++ b/views/components/user_navbar.templ
@@ -6,7 +6,7 @@ import (
 )
 
 templ UserNavbar(user models.User) {
-	<nav class="flex flex-row justify-between items-center w-screen h-16 p-6">
+	<nav class="flex flex-row justify-between items-center w-screen h-16 p-6 fixed top-0 z-10">
 		@Logo()
 		<ul class="mr-12 font-bold flex flew-row justify-between">
 			<li class="ml-6 hover:scale-125"><a href="/about">Our Story</a></li>
