--- a/views/pages/not_found.templ
+++ b/views/pages/not_found.templ
@@ -15,13 +15,13 @@ templ NotFound(isLoggedIn bool, user models.User) {
 		<script src="https://cdn.tailwindcss.com"></script>
 		<script src="https://kit.fontawesome.com/84325e05c5.js" crossorigin="anonymous"></script>
 	</head>
-	<body class="flex flex-col items-center">
+	<body class="bg-image flex flex-col items-center">
 		if isLoggedIn {
 			@components.UserNavbar(user)
 		} else {
 			@components.GuestNavbar()
 		}
-		<div class="flex justify-center items-center max-w-6xl" style="height: calc(100vh - 64px);">
+		<div class="flex justify-center items-center max-w-6xl mt-16" style="height: calc(100vh - 64px);">
 			<h1 class="font-bold text-4xl p-4"><span class="text-9xl">404</span><br/><br/>Oops,<br/>Page Not Found...</h1>
 			<img class="max-w-3xl" src="/views/images/error.svg"/>
 		</div>
