--- a/views/pages/profile.templ
+++ b/views/pages/profile.templ
@@ -5,27 +5,38 @@ import "dwelr/models"
 
 templ ProfilePage(isLoggedIn bool, user models.User) {
 	@layouts.Base(isLoggedIn, user) {
-		<div class="w-full" style="height: calc(100vh - 64px);">
-			<h1 class="font-bold text-2xl text-center mb-10">User Profile</h1>
-			<div class="flex max-w-4xl mx-auto">
-				/* Left side of the profile */
-				<div class="flex flex-col justify-center items-center p-5 w-1/3">
-					<figure class="h-48 w-48 rounded">
-						<img class="rounded" src="/views/images/Placeholder.svg"/>
-					</figure>
-					<button class="rounded w-50 h-10 p-2 mt-4 font-bold text-sm" type="button" style="background-color: #FF8C00;">Update Profile Picture</button>
+		<h1 class="font-bold text-2xl text-center mt-16 mb-10">User Profile</h1>
+		<div class="w-screen flex">
+			<div class="max-w-4xl mx-auto" style="height: calc(100vh - 64px);">
+				// Profile
+				<div class="flex flex-col bg-white rounded w-full h-4/5 shadow-xl">
+					// 
+					<div class="w-full flex flex-col justify-center p-5">
+						<figure class="h-56 w-56 rounded mx-auto">
+							<img class="object-cover rounded" src="/views/images/Placeholder.svg"/>
+						</figure>
+					</div>
+					// 
+					<div class="w-full flex flex-col justify-center p-5">
+						/* Full Name */
+						<p class="font-bold text-2xl my-3">{ user.FirstName + " " + user.LastName}</p>
+						<form>
+							<label class="font-bold mt-2 mb-2">Email</label>
+							<p >{ user.Email }</p>
+							<br/>
+							<label class="font-bold mt-4 mb-2">Password</label>
+							<p>********</p>
+						</form>
+						<button class="rounded w-50 h-10 p-2 mt-4 font-bold text-sm" type="button" style="background-color: #FF8C00;">Update Profile</button>
+					</div>
 				</div>
-				/* Right side of the profile */
-				<div class="p-5 w-2/3">
-					/* Full Name */
-					<p class="font-bold text-2xl my-8">{ user.FirstName + " " + user.LastName}</p>
-					<p class="font-bold mt-2 mb-1">Email</p>
-					<p >{ user.Email }</p>
-					<hr class="mt-2 border-2"/>
-					<p class="font-bold mt-2 mb-1">Password</p>
-					<p>********</p>
-					<hr class="mt-2 border-2"/>
-					<hr class="mt-2 border-2"/>
+			</div>
+			// Listings
+			<div class="flex flex-col bg-white rounded w-full max-w-4xl h-4/5 mx-auto p-5 shadow-xl">
+				<h3 class="text-xl font-semibold">My Listings</h3>
+				<hr/>
+				<div class="">
+					<p>Your listed properties will appear here. Begin adding your properties now to showcase them to interested tenants.</p>
 				</div>
 			</div>
 		</div>
