--- a/views/pages/register.templ
+++ b/views/pages/register.templ
@@ -14,7 +14,7 @@ templ RegisterPage() {
 			<script src="https://cdn.tailwindcss.com"></script>
 			<script src="https://unpkg.com/htmx.org@1.9.11" integrity="sha384-0gxUXCCR8yv9FM2b+U3FDbsKthCI66oH5IA9fHppQq9DDMHuMauqq1ZHBpJxQ0J0" crossorigin="anonymous"></script>
 		</head>
-		<body class="">
+		<body class="bg-image">
 			<div class="flex h-screen justify-center items-center">
 				<div class="bg-white flex justify-center items-center max-w-4xl rounded shadow-lg">
 					/* Left side */
@@ -25,7 +25,7 @@ templ RegisterPage() {
 					</div>
 					/* Right side */
 					<div class="bg-white w-1/2 flex flex-col justify-center items-center p-6">
-						<h1 class="font-bold text-3xl">Get Started</h1>
+						<h1 class="font-bold text-3xl mb-8">Get Started</h1>
 						<p>Already have an account? <a class="font-bold" href="/login">Log In</a></p>
 						<form class="flex flex-col mt-8">
 							<input class="border-b-black border-b-2 px-3 pt-3 p-1 w-80 h-14 placeholder-black" type="text" name="first_name" placeholder="First Name"/>
